[package]
name = "skiddie"
version = "0.1.0"
authors = ["pekanius"]
edition = "2018"
description = "Simple rust crate that translates text to $cr!pt |{!dd!3 style"
exclude = ["examples/*"]
keywords = ["fun", "funny", "script", "kiddie", "l33t", "sp3@k", "leet", "speak"]
categories = ["text-processing"]

repository = "https://github.com/pekanius/skiddie"
readme = "README.md"
license = "MIT"

[dependencies]